All Working Before Tailwind css

--- a/package.json
+++ b/package.json
@@ -16,9 +16,17 @@
     "lint:md:docs": "wp-scripts lint-md-docs",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
     "test:e2e": "wp-scripts test-e2e",
-    "test:unit": "wp-scripts test-unit-js"
+    "test:unit": "wp-scripts test-unit-js",
+    "plugin-zip": "wp-scripts plugin-zip",
+    "prezip:php": "composer install --no-dev -o",
+    "prezip:js": "npm run build",
+    "prezip": "npm-run-all prezip:* make-log",
+    "make-log": "node makeZip.js --changelog-only",
+    "zip": "node makeZip.js"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^26.0.0"
+    "@wordpress/scripts": "^26.0.0",
+    "archiver": "^5.3.1",
+    "npm-run-all": "^4.1.5"
   }
 }
