Update dependencies, enhance UI, and improve post handling
- Upgrade myclabs/deep-copy to version 1.13.4 and nikic/php-parser to version 5.7.0 in composer.lock
- Add new dependencies for React and Tailwind CSS in package.json and package-lock.json
- Refactor build and start scripts to include webpack source and output paths
- Update Post Station plugin version to 0.0.1 and improve settings page with API documentation modal
- Enhance post work manager to handle new fields like instructions and image configuration
- Introduce new CSS styles for processing animations and modal components in admin CSS
- Improve JavaScript functionality for handling post fields and modal interactions

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Joe Titus",
   "license": "GPL-2.0-or-later",
   "scripts": {
-    "build": "wp-scripts build",
-    "start": "wp-scripts start",
+    "build": "wp-scripts build --webpack-src-dir=src --output-path=build",
+    "start": "wp-scripts start --webpack-src-dir=src --output-path=build",
     "packages-update": "wp-scripts packages-update",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
@@ -24,9 +24,23 @@
     "make-log": "node makeZip.js --changelog-only",
     "zip": "node makeZip.js"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
+  },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.0",
+    "@babel/preset-react": "^7.23.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@wordpress/scripts": "^26.0.0",
     "archiver": "^5.3.1",
-    "npm-run-all": "^4.1.5"
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.0",
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^4.0.0"
   }
 }
