--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": ">=7.4"
+    "php": ">=7.4",
+    "woocommerce/action-scheduler": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
