--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "archiver": "^5.3.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "daisyui": "^5.5.18",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.0",
