Update plugin branding and enhance settings functionality
- Changed plugin name and author to reflect rebranding to "Post Station by Rankima".
- Revised plugin description for clarity on integration with Rankima's n8n workflow.
- Added new settings for saving workflow API key and webhook options.
- Implemented functionality to manage development settings, including tunnel URL configurations.
- Updated image generation mode to simplify options for users.
- Enhanced user interface components to support new settings and improve overall user experience.

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "joetitus/poststation",
-  "description": "A robust WordPress plugin to handle automated post creation via API",
+  "name": "rankima/poststation",
+  "description": "Post Station by Rankima connects your WordPress site to the Rankima n8n workflow, giving you full control over AI content generation, scheduling, and publishing — all from a simple dashboard interface.",
   "type": "wordpress-plugin",
   "license": "GPL-2.0-or-later",
   "authors": [
     {
-      "name": "Joe Titus",
-      "email": "your@email.com"
+      "name": "Rankima",
+      "email": "support@rankima.com"
     }
   ],
   "minimum-stability": "dev",
